# markdown-splitter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yaml
markdown_splitter/: __init__.py  splitter.py
tests/: test_splitter.py
